--- a/assets/html/photos.html
+++ b/assets/html/photos.html
@@ -20,18 +20,25 @@
 
   <h1>Photos Page</h1>
   <div class="flex">
-
-    <img class="corn" src="../images/corn.jpg" alt="">
+    <div class="row">
+      <img class="corn" src="../images/corn.jpg" alt="">
+      <img class="corn" src="../images/corn.jpg" alt="">
+    </div>
+    <div class="row">
+      <img class="corn" src="../images/corn.jpg" alt="">
+      <img class="corn" src="../images/corn.jpg" alt="">
+    </div>
     <p class="test">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
       commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
       pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-      laborum.</p>
+      laborum.
+    </p>
 
   </div>
 
   <div class="footer">
-    <p class="foot-text">Sign Up for my  <a href="">Joke of the Day!</a> </p>
+    <p class="foot-text">Sign Up for my <a href="">Joke of the Day!</a> </p>
   </div>
 </body>
 
