--- a/assets/html/photos.html
+++ b/assets/html/photos.html
@@ -12,21 +12,21 @@
 
 
   <ul>
-    <li><a class="active" href="../../index.html">Home</a></li>
-    <li><a href="profile.html">Profile</a></li>
-    <li><a href="photos.html">Photos</a></li>
-    <li><a href="#about">About</a></li>
+    <li><a href="../../index.html">Home</a></li>
+    <li><a href="form.html">Form</a></li>
+    <li><a class="active" href="photos.html">Photos</a></li>
+    <!-- <li><a href="#about">About</a></li> -->
   </ul>
 
   <h1>Photos Page</h1>
   <div class="flex">
-    <div class="row">
-      <img class="corn" src="../images/corn.jpg" alt="">
-      <img class="corn" src="../images/corn.jpg" alt="">
+    <div class="row top">
+      <img class="corn" src="../images/italy.jpg" alt="">
+      <img class="corn" src="../images/italy2.jpg" alt="">
     </div>
     <div class="row">
-      <img class="corn" src="../images/corn.jpg" alt="">
-      <img class="corn" src="../images/corn.jpg" alt="">
+      <img class="corn" src="../images/italy3.jpg" alt="">
+      <img class="corn" src="../images/italy4.jpg" alt="">
     </div>
     <p class="test">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
