--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <li><a class="active" href="index.html">Home</a></li>
     <li><a href="assets/html/profile.html">Profile</a></li>
     <li><a href="assets/html/photos.html">Photos</a></li>
-    <li><a href="#about">About</a></li>
+    <!-- <li><a href="#about">About</a></li> -->
   </ul>
 
   <h1>Home Page</h1>
