--- a/assets/html/form.html
+++ b/assets/html/form.html
@@ -5,17 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>2.12 Stripe - Profile</title>
-  <link rel="stylesheet" href="assets/styles/index.css">
+  <link rel="stylesheet" href="../styles/index.css">
 </head>
 
 <body>
 
 
   <ul>
-    <li><a class="active" href="../../index.html">Home</a></li>
-    <li><a href="profile.html">Profile</a></li>
+    <li><a href="../../index.html">Home</a></li>
+    <li><a class="active" href="form.html">Form</a></li>
     <li><a href="photos.html">Photos</a></li>
-    <li><a href="#about">About</a></li>
+    <!-- <li><a href="#about">About</a></li> -->
   </ul>
 
   <h1>Profile Page</h1>
@@ -26,6 +26,10 @@
       commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
       pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
       laborum.</p>
+
+  </div>
+
+  <div class="form">
 
   </div>
 
