--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <ul>
     <li><a class="active" href="index.html">Home</a></li>
-    <li><a href="assets/html/profile.html">Profile</a></li>
+    <li><a href="assets/html/form.html">Form</a></li>
     <li><a href="assets/html/photos.html">Photos</a></li>
     <!-- <li><a href="#about">About</a></li> -->
   </ul>
