--- a/assets/html/photos.html
+++ b/assets/html/photos.html
@@ -20,8 +20,8 @@
   <h1>Photos Page</h1>
   <div class="flex">
     <div class="row top">
-      <img class="corn" src="../images/italy.jpg" alt="">
-      <img class="corn" src="../images/italy2.jpg" alt="">
+      <img class="corn top" src="../images/italy.jpg" alt="">
+      <img class="corn top" src="../images/italy2.jpg" alt="">
     </div>
     <div class="row">
       <img class="corn" src="../images/italy3.jpg" alt="">
